# ralph_harness

./: .env.example  .gitignore  CLAUDE.md  README.md  SPEC.md  store.json
.beads/: issues.jsonl
.github/workflows/: ci.yml  release.yml
.mrmouth/: Dockerfile  config.toml  prompt.md
defaults/: AGENTS.md  CLAUDE.md  claude-settings.json  project.conf.example
mrmouth/: Cargo.toml
mrmouth/src/: config.rs  docker.rs  epic.rs  init.rs  litebrite.rs  loop_cmd.rs  main.rs  prompt.rs  run.rs  stream_fmt.rs  summary.rs
scripts/: decide.sh  init.sh  lib.sh  run-epic.sh  run-loop.sh  run.sh  stream-fmt.ts  summary.sh
scripts/runner/: Dockerfile  run-epic.sh  run.sh
tests/: test-external-mode.sh  test-init.sh
