[package]
name = "mrmouth"
version = "0.1.0"
edition = "2021"
description = "Run Claude Code as an autonomous coding agent in Docker containers"
license = "MIT"
repository = "https://github.com/coobeeyon/mrmouth"
keywords = ["claude", "agent", "docker", "automation"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
toml = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
